Fix header colors and alignment, fixed registration page alignment, padding, and colors, and registration text

--- a/app/stylesheets/registration_page.css.sass
+++ b/app/stylesheets/registration_page.css.sass
@@ -22,7 +22,7 @@ h1
 
 #registration_information
   float: left
-  margin-left: 58px
+  margin-left: 38px
   margin-right: 40px
   width: 370px
   position: relative
@@ -39,9 +39,8 @@ h1
 
 #main
   form
-    margin-right: 75px
     position: relative
-    float: left
+    float: right
     margin-bottom: 250px
     display: block
     position: relative
@@ -49,6 +48,9 @@ h1
     +redlightbox
     width: 380px
     z-index: 2
+    margin-right: 40px
+    padding: 30px
+
 
     .facebook
       float: right
@@ -88,7 +90,10 @@ h1
       width: 368px
       display: block
       +serif
-      margin-top: 20px
+      margin-top: 10px
+    
+    #user_full_name
+      margin-top: 15px
       
     .create
       width: 380px
